--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,18 +10,19 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
 
-$blue:    #0d6efd !default;
+$slateblue:#7854F7 !default;
+$blue:    #12a5ed !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #fadb14 !default;
-$green:   #52c41a !default;
+$red:     #f5325b !default;
+$orange:  #ff8400 !default;
+$yellow:  #ffca00 !default;
+$green:   #7ed321 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
-$primary:       $blue !default;
+$primary:       $slateblue !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
