--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -50,7 +50,7 @@
       }
     }
     .viking-submenu {
-      display: none; // 使用CSSTransition.unmountOnExit 属性后
+      // display: none; // 使用CSSTransition.unmountOnExit 属性后
       list-style:none;
       padding-left: 0;
       white-space: nowrap;
@@ -66,7 +66,7 @@
       }
     }
     .viking-submenu.menu-opened {
-      display: block; // 使用CSSTransition.unmountOnExit 属性后
+      // display: block; // 使用CSSTransition.unmountOnExit 属性后
     }
   }
   .menu-horizontal {
